@@ -4,6 +4,7 @@ Akeeba Data Compliance 3.2.0
 ~ Joomla 5 preparation: Use DatabaseInterface instead of DatabaseDriver
 ~ Joomla 5 preparation: Remove obsolete class names
 ~ Joomla 5 preparation: Work around backwards incompatible changes in core plugin events
+~ Joomla 5 preparation: Normalise plugin event calling
 ~ Block uninstallation of child extensions
 ~ Changed the plugins' namespace
 ~ Force Joomla to create its namespace map afresh at the end of installation, in case it failed to do that automatically
